--- a/course_demo/index.html
+++ b/course_demo/index.html
@@ -6,16 +6,32 @@
     <title>Questiona and Answer</title>
 </head>
 <body>
-    <form action="/" method="POST">
-        <label>Student_id: </label>
-        <input type = "text" name = "userid" value="" /><br/><br/>
-        <label>Question1: </label>
-        <input type="text" name="dname" value="" /><br /><br/>
-        <label>Answer1: </label>
-        <input type="text" name="demail" value="" /><br /><br/>
-        <label>Question2: </label>
-        <input type="text" name="daddress" value="" /><br/><br/>
-        <button>submit</button>
-    </form>
+<script src="https://ccmjs.github.io/akless-components/submit/versions/ccm.submit-4.0.0.js"></script>
+
+<ccm-submit-4-0-0 key='["ccm.get","resources/configs.js","localhost"]'>
+    <h3>Input</h3>
+
+    <label>
+        Question 1: <br />
+        <input type="text" name="q1">  <br />
+    </label>
+    <label>
+        Answer 1:  <br />
+        <input type="text" name="a1"> <br />
+    </label>
+    <label>
+        Question 2:  <br />
+        <input type="text" name="q2"> <br />
+    </label>
+    <label>
+        Answer 2:  <br />
+        <input type="text" name="a2"> <br />
+    </label>
+
+    <h3>Submit</h3>
+    <input type="submit">
+
+</ccm-submit-4-0-0>
+
 </body>
 </html>
