--- a/course_demo/index.html
+++ b/course_demo/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Questiona and Answer</title>
+    <title>Questions and Answers</title>
 </head>
 <body>
 <script src="https://ccmjs.github.io/akless-components/submit/versions/ccm.submit-4.0.0.js"></script>
