--- a/course_demo/index.html
+++ b/course_demo/index.html
@@ -6,9 +6,10 @@
     <title>Questions and Answers</title>
 </head>
 <body>
-<script src="https://ccmjs.github.io/akless-components/submit/versions/ccm.submit-4.0.0.js"></script>
-
-<ccm-submit-4-0-0 key='["ccm.get","resources/configs.js","localhost"]'>
+<!--<script src="https://ccmjs.github.io/akless-components/submit/versions/ccm.submit-4.0.0.js"></script>-->
+<script src="ccm.course_demo.js"></script>
+<!--<ccm-submit-4-0-0 key='["ccm.get","resources/configs.js","localhost"]'>-->
+<ccm-course_demo key='["ccm.get", "resources/configs.js", "localhost"]'>
     <h3>Input</h3>
 
     <label>
@@ -31,7 +32,7 @@
     <h3>Submit</h3>
     <input type="submit">
 
-</ccm-submit-4-0-0>
+</ccm-course_demo>
 
 </body>
 </html>
