use correct way to start comp in ccm 18

--- a/course_demo/index.html
+++ b/course_demo/index.html
@@ -86,7 +86,10 @@
       );
 
       // start app
-      ccm.start( 'ccm.course_demo.js', instance => ccm.helper.setContent( document.body, instance.root ));
+      (async () => {
+        const instance = await ccm.start( 'ccm.course_demo.js' );
+        ccm.helper.setContent( document.body, instance.root );
+      })();
 
     });
 </script>
